--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,47 +1,33 @@
 {
-  "env": {
-    "browser": true,
-    "es6": true,
-    "jest": true,
-    "node": true
-  },
-  "extends": [
-    "eslint:recommended",
-    "plugin:import/errors",
-    "plugin:react/recommended",
-    "plugin:jsx-a11y/recommended",
-    "prettier"
-  ],
-  "parserOptions": {
-    "ecmaFeatures": {
-      "jsx": true
-    },
-    "ecmaVersion": 12,
-    "sourceType": "module"
-  },
-  "plugins": ["react", "import", "jsx-a11y", "prettier"],
-  "rules": {
-    "react/react-in-jsx-scope": "off",
-    "no-console": 1,
-    "no-unused-vars": 1,
-    "react/prop-types": [0],
-    "prettier/prettier": [
-      "warn",
-      {
-        "trailingComma": "none",
-        "semi": false,
-        "jsxSingleQuote": true,
-        "singleQuote": true,
-        "useTabs": true,
-        "tabWidth": 2,
-        "arrowParens": "always",
-        "endOfLine": "lf"
-      }
-    ]
-  },
-  "settings": {
-    "react": {
-      "version": "detect"
-    }
-  }
+	"env": {
+		"browser": true,
+		"es6": true,
+		"node": true
+	},
+	"extends": ["plugin:react/recommended", "airbnb", "prettier"],
+	"plugins": ["react", "prettier"],
+	"rules": {
+		"react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
+		"react/react-in-jsx-scope": "off",
+		"react/jsx-props-no-spreading": "off",
+		"react/prop-types": [0]
+		// "no-console": 1,
+		// "no-unused-vars": 1,
+		// "react/prop-types": [
+		// 	"enabled",
+		// 	{ "ignore": "ignore", "customValidators": "customValidator" }
+		// ]
+	},
+	"parserOptions": {
+		"ecmaFeatures": {
+			"jsx": true
+		},
+		"ecmaVersion": 12,
+		"sourceType": "module"
+	},
+	"settings": {
+		"react": {
+			"version": "detect"
+		}
+	}
 }
