--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "next": "^11.0.1",
     "prop-types": "^15.7.2",
     "react": "17.x",
-    "react-dom": "17.x"
+    "react-dom": "17.x",
+    "react-icons": "^4.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.14.6",
