--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
 		"@fontsource/inter": "^4.5.0",
 		"framer-motion": "^4.1.17",
 		"next": "^11.0.1",
+		"nodemailer": "^6.6.3",
 		"prop-types": "^15.7.2",
 		"react": "17.x",
 		"react-dom": "17.x",
@@ -53,6 +54,7 @@
 		"eslint-plugin-react": "7.21.5",
 		"eslint-plugin-react-hooks": "1.7.0",
 		"husky": "^7.0.0",
+		"lint-staged": "^11.1.2",
 		"prettier": "^2.2.1"
 	}
 }
