chore: :heavy_plus_sign: add preact and remove fontsource

--- a/package.json
+++ b/package.json
@@ -26,10 +26,10 @@
 		"@chakra-ui/theme-tools": "^1.1.9",
 		"@emotion/react": "^11.4.0",
 		"@emotion/styled": "^11.3.0",
-		"@fontsource/inter": "^4.5.0",
 		"framer-motion": "^4.1.17",
 		"next": "^11.0.1",
 		"nodemailer": "^6.6.3",
+		"preact": "^10.5.14",
 		"prop-types": "^15.7.2",
 		"react": "17.x",
 		"react-dom": "17.x",
