--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
 	"scripts": {
 		"dev": "next dev",
 		"build": "next build",
+		"postbuild": "node ./scripts/generate-sitemap.mjs",
 		"start": "next start",
 		"storybook": "start-storybook -p 6006",
 		"build-storybook": "build-storybook",
@@ -47,6 +48,7 @@
 		"eslint-plugin-prettier": "^3.4.0",
 		"eslint-plugin-react": "7.21.5",
 		"eslint-plugin-react-hooks": "1.7.0",
+		"globby": "^12.0.2",
 		"husky": "^7.0.0",
 		"lint-staged": "^11.1.2",
 		"prettier": "^2.2.1"
