feat: :chart_with_upwards_trend: add google analytics to the site

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,6 +10,7 @@
 		"react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
 		"react/react-in-jsx-scope": "off",
 		"react/jsx-props-no-spreading": "off",
+		"react/no-danger": "off",
 		"react/prop-types": [0],
 		"import/no-extraneous-dependencies": ["error", { "devDependencies": true }]
 		// "no-console": 1,
