--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
 		"@chakra-ui/theme-tools": "^1.1.9",
 		"@emotion/react": "^11.4.0",
 		"@emotion/styled": "^11.3.0",
+		"date-fns": "^2.23.0",
 		"framer-motion": "^4.1.17",
-		"next": "^11.0.1",
+		"mdx-bundler": "^6.0.1",
+		"next": "^11.1",
 		"nodemailer": "^6.6.3",
 		"preact": "^10.5.14",
 		"react": "17.x",
@@ -35,12 +37,21 @@
 	},
 	"devDependencies": {
 		"@babel/core": "^7.14.6",
+		"esbuild": "^0.12.20",
 		"eslint": "7.2.0",
 		"eslint-config-next": "^11.1.0",
 		"eslint-config-prettier": "^8.3.0",
 		"globby": "^12.0.2",
+		"gray-matter": "^4.0.3",
 		"husky": "^7.0.0",
 		"lint-staged": "^11.1.2",
-		"prettier": "^2.2.1"
+		"prettier": "^2.2.1",
+		"reading-time": "^1.4.0",
+		"rehype": "^12.0.0",
+		"rehype-autolink-headings": "6.0.0",
+		"rehype-code-titles": "1.0.3",
+		"rehype-prism-plus": "^0.0.5",
+		"rehype-slug": "5.0.0",
+		"remark-gfm": "^2.0.0"
 	}
 }
