--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
-	"name": "nextjs",
+	"name": "portfolio",
 	"version": "0.1.0",
-	"private": true,
+	"private": false,
+	"description": "My personal website built using Next.js, ChakraUI and MDX",
+	"license": "MIT",
+	"author": "Nitesh Seram <niteshseram@gmail.com>",
 	"scripts": {
 		"dev": "next dev",
 		"build": "next build",
@@ -53,5 +56,13 @@
 		"rehype-prism-plus": "^0.0.5",
 		"rehype-slug": "5.0.0",
 		"remark-gfm": "^2.0.0"
-	}
+	},
+	"keywords": [
+		"next.js",
+		"react.js",
+		"mdx",
+		"portfolio",
+		"personal website",
+		"chakra"
+	]
 }
