--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
 	},
 	"lint-staged": {
 		"*.{html,js,md,yml}": [
-			"prettier --write",
-			"git add"
+			"prettier --write"
 		]
 	},
 	"dependencies": {
@@ -36,6 +35,7 @@
 	},
 	"devDependencies": {
 		"@babel/core": "^7.14.6",
+		"@next/eslint-plugin-next": "^11.1.2",
 		"autoprefixer": "^10.3.4",
 		"esbuild": "^0.12.20",
 		"eslint": "7.2.0",
