build: :heavy_plus_sign: add bundle analyzer

--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
 		"prettier": "prettier --check .",
 		"lint": "next lint",
 		"prepare": "husky install",
-		"precommit": "lint-staged"
+		"precommit": "lint-staged",
+		"analyze": "cross-env ANALYZE=true next build"
 	},
 	"lint-staged": {
 		"*.js": [
@@ -37,7 +38,9 @@
 	},
 	"devDependencies": {
 		"@babel/core": "^7.14.6",
+		"@next/bundle-analyzer": "^11.1.2",
 		"autoprefixer": "^10.3.4",
+		"cross-env": "^7.0.3",
 		"esbuild": "^0.12.20",
 		"eslint": "7.2.0",
 		"eslint-config-next": "^11.1.0",
