--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
 		]
 	},
 	"dependencies": {
+		"@prisma/client": "^3.6.0",
 		"@tailwindcss/typography": "^0.4.1",
 		"date-fns": "^2.23.0",
 		"mdx-bundler": "^6.0.1",
@@ -35,7 +36,8 @@
 		"preact": "^10.5.14",
 		"react": "17.x",
 		"react-dom": "17.x",
-		"react-icons": "^4.2.0"
+		"react-icons": "^4.2.0",
+		"swr": "^1.1.2-beta.0"
 	},
 	"devDependencies": {
 		"@babel/core": "^7.14.6",
