Upgrade next to latest

--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
 	"name": "niteshseram.in",
-	"version": "0.1.0",
+	"version": "1",
 	"private": false,
-	"description": "My personal website built using Next.js, ChakraUI and MDX",
+	"description": "My personal website built using Next.js, TailwindCSS and MDX",
 	"license": "MIT",
 	"author": "Nitesh Seram <niteshseram@gmail.com>",
 	"scripts": {
@@ -30,13 +30,13 @@
 		"@prisma/client": "^3.6.0",
 		"@tailwindcss/typography": "^0.4.1",
 		"date-fns": "^2.23.0",
-		"mdx-bundler": "^6.0.1",
-		"next": "^11.1",
+		"mdx-bundler": "^9.2.1",
+		"next": "^13.3.1",
 		"next-themes": "^0.0.15",
 		"nodemailer": "^6.6.3",
 		"preact": "^10.5.14",
-		"react": "17.x",
-		"react-dom": "17.x",
+		"react": "^18.2.0",
+		"react-dom": "^18.2.0",
 		"react-icons": "^4.2.0",
 		"swr": "^1.1.2-beta.0"
 	},
@@ -71,6 +71,6 @@
 		"mdx",
 		"portfolio",
 		"personal website",
-		"chakra"
+		"tailwind"
 	]
 }
