--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "clsx": "^1.2.1",
     "eslint": "8.39.0",
     "eslint-config-next": "13.3.1",
+    "framer-motion": "^10.12.4",
     "next": "13.3.1",
     "next-themes": "^0.2.1",
     "postcss": "8.4.23",
