--- a/package.json
+++ b/package.json
@@ -1,33 +1,57 @@
 {
-  "name": "niteshseram.in",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@types/node": "18.16.3",
-    "@types/react": "18.2.0",
-    "@types/react-dom": "18.2.1",
-    "@vercel/analytics": "^1.0.0",
-    "autoprefixer": "10.4.14",
-    "clsx": "^1.2.1",
-    "eslint": "8.39.0",
-    "eslint-config-next": "13.3.1",
-    "framer-motion": "^10.12.4",
-    "next": "13.3.1",
-    "next-themes": "^0.2.1",
-    "postcss": "8.4.23",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-icons": "^4.8.0",
-    "tailwindcss": "3.3.2",
-    "typescript": "5.0.4"
-  },
-  "devDependencies": {
-    "@tailwindcss/typography": "^0.5.9"
-  }
+	"name": "niteshseram.in",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start",
+		"prettier": "prettier --check .",
+		"lint": "next lint",
+		"format": "lint-staged",
+		"prepare": "husky install",
+		"precommit": "yarn lint && lint-staged"
+	},
+	"lint-staged": {
+		"*.{html,js,md,yml}": [
+			"prettier --write"
+		]
+	},
+	"dependencies": {
+		"@types/node": "18.16.3",
+		"@types/react": "18.2.0",
+		"@types/react-dom": "18.2.1",
+		"@vercel/analytics": "^1.0.0",
+		"autoprefixer": "10.4.14",
+		"clsx": "^1.2.1",
+		"contentlayer": "^0.3.2",
+		"date-fns": "^2.30.0",
+		"eslint": "8.39.0",
+		"eslint-config-next": "13.3.1",
+		"framer-motion": "^10.12.4",
+		"mdx-bundler": "^9.2.1",
+		"next": "13.3.1",
+		"next-contentlayer": "^0.3.2",
+		"next-themes": "^0.2.1",
+		"postcss": "8.4.23",
+		"react": "18.2.0",
+		"react-dom": "18.2.0",
+		"react-icons": "^4.8.0",
+		"reading-time": "^1.5.0",
+		"rehype": "^12.0.1",
+		"rehype-autolink-headings": "^6.1.1",
+		"rehype-code-titles": "^1.2.0",
+		"rehype-pretty-code": "^0.9.5",
+		"rehype-prism-plus": "^1.5.1",
+		"rehype-slug": "^5.1.0",
+		"remark-gfm": "^3.0.1",
+		"tailwindcss": "3.3.2",
+		"typescript": "5.0.4"
+	},
+	"devDependencies": {
+		"@tailwindcss/typography": "^0.5.9",
+		"husky": "^8.0.3",
+		"lint-staged": "^13.2.2",
+		"prettier": "^2.8.8"
+	}
 }
