--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
 		"lint": "next lint",
 		"format": "lint-staged",
 		"prepare": "husky install",
-		"precommit": "yarn lint && lint-staged"
+		"precommit": "yarn lint && lint-staged",
+		"postinstall": "prisma generate"
 	},
 	"lint-staged": {
 		"*.{html,js,md,yml}": [
@@ -18,6 +19,7 @@
 		]
 	},
 	"dependencies": {
+		"@prisma/client": "^4.13.0",
 		"@types/node": "18.16.3",
 		"@types/react": "18.2.0",
 		"@types/react-dom": "18.2.1",
@@ -34,6 +36,7 @@
 		"next-contentlayer": "^0.3.2",
 		"next-themes": "^0.2.1",
 		"postcss": "8.4.23",
+		"prisma": "^4.13.0",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
 		"react-icons": "^4.8.0",
@@ -44,6 +47,7 @@
 		"rehype-prism-plus": "^1.5.1",
 		"rehype-slug": "^5.1.0",
 		"remark-gfm": "^3.0.1",
+		"swr": "^2.1.5",
 		"tailwindcss": "3.3.2",
 		"typescript": "5.0.4"
 	},
