--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
 		"rehype-prism-plus": "^1.5.1",
 		"rehype-slug": "^5.1.0",
 		"remark-gfm": "^3.0.1",
+		"shiki": "^0.14.2",
 		"swr": "^2.1.5",
 		"tailwindcss": "3.3.2",
 		"typescript": "5.0.4"
