--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 		"@types/react": "18.2.0",
 		"@types/react-dom": "18.2.1",
 		"@vercel/analytics": "^1.0.0",
+		"@vercel/og": "^0.5.4",
 		"autoprefixer": "10.4.14",
 		"clsx": "^1.2.1",
 		"contentlayer": "^0.3.2",
