--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
 	},
 	"devDependencies": {
 		"@tailwindcss/typography": "^0.5.9",
+		"@types/canvas-confetti": "^1.6.0",
 		"husky": "^8.0.3",
 		"lint-staged": "^13.2.2",
 		"prettier": "^2.8.8"
