--- a/package.json
+++ b/package.json
@@ -25,7 +25,6 @@
 		"@types/react-dom": "18.2.1",
 		"@vercel/analytics": "^1.0.0",
 		"@vercel/og": "^0.5.4",
-		"autoprefixer": "10.4.14",
 		"canvas-confetti": "^1.6.0",
 		"clsx": "^1.2.1",
 		"contentlayer": "^0.3.2",
@@ -38,7 +37,6 @@
 		"next": "13.3.1",
 		"next-contentlayer": "^0.3.2",
 		"next-themes": "^0.2.1",
-		"postcss": "8.4.23",
 		"prisma": "^4.13.0",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
@@ -48,19 +46,20 @@
 		"rehype": "^12.0.1",
 		"rehype-autolink-headings": "^6.1.1",
 		"rehype-pretty-code": "^0.9.5",
-		"rehype-prism-plus": "^1.5.1",
 		"rehype-slug": "^5.1.0",
 		"remark-gfm": "^3.0.1",
 		"shiki": "^0.14.2",
 		"swr": "^2.1.5",
-		"tailwindcss": "3.3.2",
 		"typescript": "5.0.4"
 	},
 	"devDependencies": {
 		"@tailwindcss/typography": "^0.5.9",
 		"@types/canvas-confetti": "^1.6.0",
+		"autoprefixer": "^10.4.14",
 		"husky": "^8.0.3",
 		"lint-staged": "^13.2.2",
-		"prettier": "^2.8.8"
+		"postcss": "^8.4.24",
+		"prettier": "^2.8.8",
+		"tailwindcss": "^3.3.2"
 	}
 }
