--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
 		"eslint-config-next": "13.3.1",
 		"framer-motion": "^10.12.4",
 		"mdx-bundler": "^9.2.1",
-		"next": "13.3.1",
+		"next": "^13.4.5-canary.9",
 		"next-contentlayer": "^0.3.2",
 		"next-themes": "^0.2.1",
 		"prisma": "^4.13.0",
